--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   showcaseview: ^4.0.1
   animated_text_kit: ^4.2.3
   tutorial_coach_mark: ^1.3.0
+  youtube_explode_dart: ^2.4.0
 
 #dependency_overrides:
 #  video_player_android: 2.7.1
