--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,9 +56,9 @@ dependencies:
   rename: ^3.0.2
   webview_flutter: ^4.10.0
   showcaseview: ^4.0.1
-  animated_text_kit: ^4.2.3
   tutorial_coach_mark: ^1.3.0
   youtube_explode_dart: ^2.4.0
+  get: ^4.7.2
 
 #dependency_overrides:
 #  video_player_android: 2.7.1
